[gd_scene load_steps=15 format=3 uid="uid://d2qjlgo2edf63"]

[ext_resource type="Script" uid="uid://byflrd7c30ch1" path="res://objects/UI/desktop_main.gd" id="1_3nd8x"]
[ext_resource type="Texture2D" uid="uid://p7eh6ae65qu" path="res://sprites/folder.png" id="1_bakrh"]
[ext_resource type="Script" uid="uid://bra12fkg6oqe2" path="res://objects/UI/desktop_icon.gd" id="2_klb34"]
[ext_resource type="Texture2D" uid="uid://dhqhplo8i2lrx" path="res://sprites/file.png" id="2_ve7u0"]
[ext_resource type="PackedScene" uid="uid://buquhpc3lyuk0" path="res://scenes/UI/ImageCode.tscn" id="3_00rte"]
[ext_resource type="Script" uid="uid://bf4ajf12j6e3e" path="res://scripts/UI/Components/content_desktop.gd" id="3_vf5d3"]
[ext_resource type="Script" uid="uid://cgsr6rbgsvss0" path="res://scripts/UI/Components/icon_desktop.gd" id="4_tcjen"]
[ext_resource type="PackedScene" uid="uid://mb27qmslhd63" path="res://objects/UI/desktop_window.tscn" id="6_llkfl"]
[ext_resource type="Texture2D" uid="uid://brj07ig4vjc2q" path="res://sprites/cursor_terminal.png" id="9_87ay7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3t0jw"]

[sub_resource type="Resource" id="Resource_s5mwb"]
script = ExtResource("3_vf5d3")
title = "simu.exe"
content = ExtResource("3_00rte")

[sub_resource type="Resource" id="Resource_p2x6e"]
script = ExtResource("4_tcjen")
name = "sim.exe"
icon = ExtResource("2_ve7u0")
content = SubResource("Resource_s5mwb")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5opg"]
size = Vector2(50, 55)

[sub_resource type="CircleShape2D" id="CircleShape2D_qrpnc"]
radius = 6.0

[node name="DesktopMain" type="Control"]
layout_mode = 3
anchor_right = 0.4
anchor_bottom = 0.731
offset_right = -256.0
offset_bottom = -255.7
script = ExtResource("1_3nd8x")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 70.0
offset_bottom = 75.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_3t0jw")
script = ExtResource("2_klb34")
res = SubResource("Resource_p2x6e")

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0
dragger_visibility = 1

[node name="Icon" type="TextureRect" parent="PanelContainer/VSplitContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_bakrh")

[node name="Label" type="Label" parent="PanelContainer/VSplitContainer"]
clip_contents = true
layout_mode = 2
theme_override_colors/font_color = Color(0.223529, 1, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "folder"
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="PanelContainer"]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="PanelContainer/Area2D"]
position = Vector2(25, 27.5)
shape = SubResource("RectangleShape2D_p5opg")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 80.0
offset_top = 20.0
offset_right = 130.0
offset_bottom = 75.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_3t0jw")

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 0
dragger_visibility = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer2/VSplitContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_ve7u0")

[node name="Label" type="Label" parent="PanelContainer2/VSplitContainer"]
clip_contents = true
layout_mode = 2
theme_override_colors/font_color = Color(0.223529, 1, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "file.txt
"
horizontal_alignment = 1

[node name="Window" parent="." instance=ExtResource("6_llkfl")]
visible = false
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 246.0
offset_bottom = 246.0

[node name="Cursor" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 150.0
offset_right = 160.0
offset_bottom = 166.0
mouse_filter = 2
texture = ExtResource("9_87ay7")

[node name="Area2D" type="Area2D" parent="Cursor"]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor/Area2D"]
shape = SubResource("CircleShape2D_qrpnc")

[connection signal="gui_input" from="PanelContainer" to="PanelContainer" method="_on_gui_input"]
[connection signal="area_shape_entered" from="PanelContainer/Area2D" to="PanelContainer" method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="PanelContainer/Area2D" to="PanelContainer" method="_on_area_2d_area_shape_exited"]
